--- a/.github/workflows/my-basics.yml
+++ b/.github/workflows/my-basics.yml
@@ -2,9 +2,9 @@
 # GitHub Action Workflow Basics
 #
 # Version      Date        Info
-# 1.0          2019        Initial Version
+# 1.0          2022        Initial Version
 #
-# Made by Denis Astahov ADV-IT Copyleft (c) 2019
+# Made by Alex Rez alexqwinta Copyleft (c) 2022
 #---------------------------------------------------------------------
 name: My-GitHubActions-Basics
 env:
