--- a/.github/workflows/my-basics.yml
+++ b/.github/workflows/my-basics.yml
@@ -15,7 +15,7 @@ on:
   push:
     branches: 
       - master
-
+      
 jobs:
   my_testing:
     runs-on: ubuntu-latest
@@ -60,7 +60,7 @@ jobs:
 
     
     - name: Printing Deployment package
-      run : echo "Deplyo pakcage name is ${{ env.DEPLOY_PACKAGE_NAME }}"
+      run : echo "Deploy package name is ${{ env.DEPLOY_PACKAGE_NAME }}"
     
     - name: Lets test some packages if they are here 1
       run : aws --version
